Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-51215

XCB: Drag and drop doesn't work properly with multiple X11 Screens / XCB Virtual Desktops

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P4: Low
    • 5.6.1
    • 5.6.0 Beta
    • GUI: Drag and Drop
    • None
    • Linux/X11
    • 78ad8f208d8dbe3575194bb9b97d4e42efdc32d5

    Description

      Lest have two graphics cards and one output for every device (primary and secondary).
      Bug1: open the window on secondary screen and start dragging - the shaped pixmap window appears on primary screen (instead of secondary screen).
      Bug2: try to drag something into another screen - the drag and drop will lock (lack of grab after recreating shaped pixmap window).

      Attachments

        For Gerrit Dashboard: QTBUG-51215
        # Subject Branch Project Status CR V

        Activity

          People

            zaps166 Błażej Szczygieł
            zaps166 Błażej Szczygieł
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes